# fast_csv_loader

./: .buildinfo  .gitignore  Algorithm.html  README.md  Usage.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: Algorithm.doctree  Usage.doctree  environment.pickle  index.doctree
.github/workflows/: publish-to-pypi.yml
_sources/: Usage.rst.txt  index.rst.txt
_static/: documentation_options.js
csv_loader/: __init__.py
docs/source/: Algorithm.rst  Usage.rst  conf.py  index.rst
fast_csv_loader/: __init__.py  csv_loader.py
src/: csv_loader.py  csv_loader_v1.py  csv_loader_v2.py  run.py  test_csv_loader.py
src/test_data/: algousdt.csv
tests/: context.py  run.py  test_csv_loader.py
tests/test_data/: small.csv
